part2/e2.06/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-output
  name: shared-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared
  template:
    metadata:
      labels:
        app: shared
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: example-configmap
      containers:
        - name: pingpong
          image: sannahan/pingpong:e2.01
        - name: log-output
          image: sannahan/log-output:e2.06.1
          volumeMounts:
          - name: config-volume
            mountPath: /etc/config
