part2/e2.06/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: log-output
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: shared
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
